--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "dependencies": {
     "babel-polyfill": "^6.3.14",
+    "firebase": "^3.3.0",
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
     "react-redux": "^4.1.2",
     "redux": "^3.1.2",
+    "redux-thunk": "^2.1.0",
     "victory": "^0.10.4"
   },
   "devDependencies": {
