code clean up with renaming of components also, adding bumla for style

--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "dependencies": {
     "babel-polyfill": "^6.3.14",
+    "bulma": "^0.1.2",
     "firebase": "^3.3.0",
-    "react": "^15.2.1",
+    "react": "^15.3.0",
     "react-dom": "^15.2.1",
     "react-redux": "^4.1.2",
     "redux": "^3.1.2",
